feat(rail): add persistent multi-track railway generation and editor
Replace the fixed rail preset with configurable rail types stored in rail-types.yml. Split configuration, generation and menus so persistence, geometry and player interaction can be reviewed independently.

Generate one to eight aligned tracks with individual gaps, sleepers, optional overhead poles, supports and wires. Validate overlapping paths, the terrain preparation envelope and the complete placement set before queuing blocks. Keep preparation progress and cancellation tied to the active generation.

Provide in-game selection, search, pagination, creation, editing and deletion. Version the configuration and make save/delete transactional so failed writes do not change the active types. Add permissions for rail actions and multiple tracks. The track-switch setting is only a stored option for future generation support.

Consolidate the previous implementation commits on the current main branch. Retain the existing dependency and Shadow packaging configuration; the unrelated relocation changes are excluded.