@@ -1,4 +1,4 @@
-package net.buildtheearth.buildteamtools.modules.generator.components.rail;
+package net.buildtheearth.buildteamtools.modules.generator.components.rail.generation;
 
 import net.buildtheearth.buildteamtools.BuildTeamTools;
 import net.buildtheearth.buildteamtools.utils.io.ConfigPaths;
@@ -15,15 +15,15 @@ record RailLimits(
 ) {
 
     // Default amount of WorldEdit control points accepted before path interpolation starts.
-    private static final int DEFAULT_MAX_CONTROL_POINTS = 1_000;
+    private static final int DEFAULT_MAX_CONTROL_POINTS = 2_000;
     // Default amount of interpolated center-path blocks a rail may contain.
-    private static final int DEFAULT_MAX_PATH_POINTS = 24_000;
+    private static final int DEFAULT_MAX_PATH_POINTS = 75_000;
     // Default amount of final center, side and support blocks queued for placement.
-    private static final int DEFAULT_MAX_BLOCK_PLACEMENTS = 150_000;
+    private static final int DEFAULT_MAX_BLOCK_PLACEMENTS = 300_000;
     // Default volume of the prepared terrain lookup region around the selected rail path.
-    private static final long DEFAULT_MAX_PREPARED_REGION_VOLUME = 1_500_000L;
+    private static final long DEFAULT_MAX_PREPARED_REGION_VOLUME = 6_000_000L;
     // Default maximum width, height or depth of the prepared terrain lookup region.
-    private static final int DEFAULT_MAX_PREPARED_REGION_AXIS_LENGTH = 1_024;
+    private static final int DEFAULT_MAX_PREPARED_REGION_AXIS_LENGTH = 2_048;
     // Default amount of block changes applied per scheduler tick during execution.
     private static final int DEFAULT_BLOCK_PLACEMENT_BATCH_SIZE = 750;
 
@@ -44,20 +44,56 @@ record RailLimits(
         FileConfiguration config = BuildTeamTools.getInstance().getConfig(ConfigUtil.GENERATOR);
 
         return new RailLimits(
-                getBoundedInt(config, ConfigPaths.Generator.Rail.MAX_CONTROL_POINTS, DEFAULT_MAX_CONTROL_POINTS, 2, MAX_CONTROL_POINTS),
-                getBoundedInt(config, ConfigPaths.Generator.Rail.MAX_PATH_POINTS, DEFAULT_MAX_PATH_POINTS, 2, MAX_PATH_POINTS),
-                getBoundedInt(config, ConfigPaths.Generator.Rail.MAX_BLOCK_PLACEMENTS, DEFAULT_MAX_BLOCK_PLACEMENTS, 1, MAX_BLOCK_PLACEMENTS),
-                getBoundedLong(config, ConfigPaths.Generator.Rail.MAX_PREPARED_REGION_VOLUME, DEFAULT_MAX_PREPARED_REGION_VOLUME, 1L, MAX_PREPARED_REGION_VOLUME),
-                getBoundedInt(config, ConfigPaths.Generator.Rail.MAX_PREPARED_REGION_AXIS_LENGTH, DEFAULT_MAX_PREPARED_REGION_AXIS_LENGTH, 1, MAX_PREPARED_REGION_AXIS_LENGTH),
-                getBoundedInt(config, ConfigPaths.Generator.Rail.BLOCK_PLACEMENT_BATCH_SIZE, DEFAULT_BLOCK_PLACEMENT_BATCH_SIZE, 1, MAX_BLOCK_PLACEMENT_BATCH_SIZE)
+                getBoundedInt(
+                        config,
+                        ConfigPaths.Generator.Rail.MAX_CONTROL_POINTS,
+                        DEFAULT_MAX_CONTROL_POINTS,
+                        2,
+                        MAX_CONTROL_POINTS
+                ),
+                getBoundedInt(
+                        config,
+                        ConfigPaths.Generator.Rail.MAX_PATH_POINTS,
+                        DEFAULT_MAX_PATH_POINTS,
+                        2,
+                        MAX_PATH_POINTS
+                ),
+                getBoundedInt(
+                        config,
+                        ConfigPaths.Generator.Rail.MAX_BLOCK_PLACEMENTS,
+                        DEFAULT_MAX_BLOCK_PLACEMENTS,
+                        1,
+                        MAX_BLOCK_PLACEMENTS
+                ),
+                getBoundedLong(
+                        config,
+                        ConfigPaths.Generator.Rail.MAX_PREPARED_REGION_VOLUME,
+                        DEFAULT_MAX_PREPARED_REGION_VOLUME,
+                        1L,
+                        MAX_PREPARED_REGION_VOLUME
+                ),
+                getBoundedInt(
+                        config,
+                        ConfigPaths.Generator.Rail.MAX_PREPARED_REGION_AXIS_LENGTH,
+                        DEFAULT_MAX_PREPARED_REGION_AXIS_LENGTH,
+                        1,
+                        MAX_PREPARED_REGION_AXIS_LENGTH
+                ),
+                getBoundedInt(
+                        config,
+                        ConfigPaths.Generator.Rail.BLOCK_PLACEMENT_BATCH_SIZE,
+                        DEFAULT_BLOCK_PLACEMENT_BATCH_SIZE,
+                        1,
+                        MAX_BLOCK_PLACEMENT_BATCH_SIZE
+                )
         );
     }
 
     private static int getBoundedInt(FileConfiguration config, String path, int fallback, int minimum, int maximum) {
-        return Math.max(minimum, Math.min(maximum, config.getInt(path, fallback)));
+        return Math.clamp(config.getInt(path, fallback), minimum, maximum);
     }
 
     private static long getBoundedLong(FileConfiguration config, String path, long fallback, long minimum, long maximum) {
-        return Math.max(minimum, Math.min(maximum, config.getLong(path, fallback)));
+        return Math.clamp(config.getLong(path, fallback), minimum, maximum);
     }
 }
